# healthatom_test

./: .env.local  .env.template  .gitignore  ANSWERS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: linters-workflow.yml
dev/: tools.sh
src/: client.py  main.py
src/app/: client.py
src/app/database/: __init__.py  db.py  operations.py
src/app/models/: db_models.py  schemas.py
tests/: conftest.py  test_client.py  test_main.py
tests/app/: test_client.py
